--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
         <!-- Studio Introduction Section -->
         <section class="studio-intro">
             <div class="intro__text">
-                <h1>About Our Studio</h1>
+                <h1>About our Studio</h1>
                 <p>We are Digital Scorpion Interactive, an Indie Game Development Studio founded in 2021 by Nick Revell. His vision is to change how games are built and prove to the gaming world that we are a positive force for our industry while making great games. DSI was founded on the principles of Ingenuity, Integrity, and Innovation. We strive to break the boundaries of modern gaming and bring to life an immersive experience that gamers will buzz about and thoroughly enjoy the journey.</p>
             </div>
             <div class="intro__image">
@@ -108,7 +108,7 @@
             <div class="hiring__text">
                 <h2>We're Hiring!</h2>
                 <p>
-                    Are you a talented and motivated individual? Then we would love to have you in our team. We try to keep our job postings up to date, keep checking back here for new openings! All job postings are currently Internships. Paid positions will be available in the future.
+                    Are you a Mad Talented and motivated individual? Then we would love to have you on our team. We try to keep our job postings up to date, keep checking back here for new openings! All job postings are currently Internships. Paid positions will be available in the future.
                 </p>
                 <div class="modal__buttons">
                     <a href="https://digital-scorpion-interactive.breezy.hr/" class="btn">View Open Roles</a>
