--- a/about.html
+++ b/about.html
@@ -86,15 +86,15 @@
             <div class="team-select">
                 <select id="team-dropdown">
                     <option value="creative-leaders">Leadership</option>
-                    <option value="prod">The Production Team</option>
-                    <option value="development-team">The Development Team</option>
-                    <option value="level-design-team">The Level Design Team</option>
-                    <option value="qa">The Quality Assurance Team</option>
-                    <option value="audio">The Audio Team</option>
-                    <option value="narr">The Narrative Team</option>
-                    <option value="comm">The Community Team</option>
-                    <option value="2d">The 2D Art Team</option>
-                    <option value="3d">The 3D Art Team</option>
+                    <option value="prod">Production Team</option>
+                    <option value="development-team">Development Team</option>
+                    <option value="level-design-team">Level Design Team</option>
+                    <option value="qa">Quality Assurance Team</option>
+                    <option value="audio">Audio Team</option>
+                    <option value="narr">Narrative Team</option>
+                    <option value="comm">Community Team</option>
+                    <option value="2d">2D Art Team</option>
+                    <option value="3d">3D Art Team</option>
                     <!-- Add more options as needed -->
                 </select>
             </div>
