--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
                     Are you a Mad Talented and motivated individual? Then we would love to have you on our team. We try to keep our job postings up to date, keep checking back here for new openings! All job postings are currently Internships. Paid positions will be available in the future.
                 </p>
                 <div class="modal__buttons">
-                    <a href="https://digital-scorpion-interactive.breezy.hr/" class="btn">View Open Roles</a>
+                    <a href="https://app.dover.com/jobs/digiscorp" class="btn">View Open Roles</a>
                     <br/>
                     <br/>
                     <a href="https://www.linkedin.com/company/digi-scorp/" class="social__link" target="_blank"><i class="fab fa-linkedin-in"></i></a>
