--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
 
     <!-- Internal CSS Link -->
     <link rel="stylesheet" href="styles.css">
-
+    <!-- Hotjar Tracking Code for my site -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:3310369,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
     <!-- Preload Key Images -->
     <link rel="preload" as="image" href="src/Index/cerulis.webp">
     <link rel="preload" as="image" href="src/Index/tov.webp">
@@ -103,9 +113,9 @@
                     <img src="src/Index/ToV_600x900.webp" alt="Game 2">
                 </div>
                 <!-- Game Card 3 -->
-                <div class="game__card" data-modal="modal3">
+                <!--<div class="game__card" data-modal="modal3">
                     <img src="src/Index/Coming Soon.webp" alt="Game 3">
-                </div>
+                </div>-->
             </div>
         </section>
 
@@ -118,9 +128,9 @@
                 <a href="https://twitter.com/digi_scorp" class="social__link" target="_blank"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.instagram.com/digital_scorpion_interactive/" class="social__link" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.youtube.com/@digitalscorpioninteractive8655" class="social__link" target="_blank"><i class="fab fa-youtube"></i></a>
-                <a href="https://discord.gg/jtVEun2wSU" class="social__link" target="_blank"><i class="fab fa-discord"></i></a>
+                <a href="https://discord.gg/jtVEun2wSU" class="social__link" target="_blank"><i class="fab fa-discord6"></i></a>
             </div>
-            <a href="https://discord.gg/jtVEun2wSU" class="community__cta">Join Our Discord</a>
+            <a href="https://discord.gg/jtVEun2wSU" class="community__cta"><i class="fab fa-discord"></i> Join Our Discord</a>
         </section>
 
         <!-- Modal Overlay -->
@@ -188,7 +198,7 @@
         <!-- Footer -->
         <footer class="footer">
             <div class="footer__content">
-                <p>&copy; 2024 Digital Scorpion Interactive. All Rights Reserved.</p>
+                <p>&copy; 2025 Digital Scorpion Interactive. All Rights Reserved.</p>
                 <ul class="footer__links">
                     <li><a href="privacy.html">Privacy Policy</a></li>
                     <li><a href="https://forms.gle/kf9PEoFEKgMTL2BS9">Submit a Bug</a></li>
