--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <a href="https://twitter.com/digi_scorp" class="social__link" target="_blank"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.instagram.com/digital_scorpion_interactive/" class="social__link" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.youtube.com/@digitalscorpioninteractive8655" class="social__link" target="_blank"><i class="fab fa-youtube"></i></a>
-                <a href="https://discord.gg/jtVEun2wSU" class="social__link" target="_blank"><i class="fab fa-discord6"></i></a>
+                <a href="https://discord.gg/jtVEun2wSU" class="social__link" target="_blank"><i class="fab fa-discord"></i></a>
             </div>
             <a href="https://discord.gg/jtVEun2wSU" class="community__cta"><i class="fab fa-discord"></i> Join Our Discord</a>
         </section>
