The gang starts a new chapter

--- a/about.html
+++ b/about.html
@@ -90,9 +90,9 @@
                     <option value="creative-leaders">Leadership</option>
                     <option value="development-team">Development Team</option>
                     <option value="level-design-team">Level Design Team</option>
-                    <option value="qa">Quality Assurance Team</option>
+                 <!--  <option value="qa">Quality Assurance Team</option>--> 
                     <option value="audio">Audio Team</option>
-                    <option value="narr">Narrative Team</option>
+                  <!--  <option value="narr">Narrative Team</option>-->
                     <option value="comm">Community Team</option>
                     <option value="2d">2D Art Team</option>
                     <option value="3d">3D Art Team</option>
